--- a/src/main/resources/static/expense/expenseCreate.html
+++ b/src/main/resources/static/expense/expenseCreate.html
@@ -67,7 +67,7 @@
     <script>
         $(document).ready(function () {
             $("#form").submit(function (event) {
-                postCustomer(getCustomerJSON(null, $('input[name=name]').val(), $('input[name=description]').val()), function (result) {
+                postExpense(getExpenseJSON(null, $('input[name=name]').val(), $('input[name=description]').val()), function (result) {
                     window.location.replace("/expense");
                 }, function (error) {
                     $("#error-modal").modal('show');
