--- a/src/main/resources/static/acrm/customer.html
+++ b/src/main/resources/static/acrm/customer.html
@@ -20,6 +20,7 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">My Profile </a>
+                            <div class="dropdown-menu"><a class="dropdown-item" href="/expense">View Expenses</a><a class="dropdown-item" href="/expense">View Expenses</a></div>
                             <div class="dropdown-menu"><a class="dropdown-item" href="/profile/edit">Edit Profile</a><a class="dropdown-item" href="/logout">Logout </a></div>
                         </li>
                     </ul>
