--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -27,7 +27,7 @@
                                     <div class="text-center">
                                         <h4 class="text-dark mb-4">Welcome Back!</h4>
                                     </div>
-                                    <form class="user" method="post">
+                                    <form class="user" id="form" method="post">
                                         <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Email"></div>
                                         <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"></div>
                                         <div class="mb-3">
