--- a/src/main/resources/static/expense/expense.html
+++ b/src/main/resources/static/expense/expense.html
@@ -224,7 +224,7 @@
             $(loadData());
 
             function loadData() {
-                getExpenses(function (result) {
+                getExpense(function (result) {
                     $("#tableData").empty();
                     $.each(result, function (i, item) {
                         $("#tableData").append($("<tr>").append($("<td>").text(item.id)).append($("<td>").text(item.name)).append($("<td>").text(item.description)).append($(
