--- a/src/main/resources/static/expense/expense.html
+++ b/src/main/resources/static/expense/expense.html
@@ -134,8 +134,7 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-md-6 text-nowrap">
-                                    <div class="btn-group" role="group"><a class="btn btn-light" role="button" href="/expense/create"> <i class="fa fa-plus-square-o"></i></a></div>
+                                <div class="btn-group" role="group"><a class="btn btn-light" role="button" href="/expense/create"> <i class="fa fa-plus-square-o"></i></a></div>
                                     <div class="modal fade" role="dialog" tabindex="-1" id="confirm-modal">
                                         <div class="modal-dialog modal-sm" role="document">
                                             <div class="modal-content">
@@ -149,6 +148,13 @@
                                             </div>
                                         </div>
                                     </div>
+                                <div class="col-md-6 text-nowrap">
+                                    <div id="dataTable_length" class="dataTables_length" aria-controls="dataTable"><label class="form-label">Show&nbsp;<select class="d-inline-block form-select form-select-sm">
+                                                <option value="10" selected="">10</option>
+                                                <option value="25">25</option>
+                                                <option value="50">50</option>
+                                                <option value="100">100</option>
+                                            </select>&nbsp;</label></div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="text-md-end dataTables_filter" id="dataTable_filter"><label class="form-label"><input type="search" class="form-control form-control-sm" aria-controls="dataTable" placeholder="Search"></label></div>
