--- a/src/main/resources/static/expense/expense.html
+++ b/src/main/resources/static/expense/expense.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="/expense"><i class="fas fa-user"></i><span>&nbsp;My Expenses</span></a></li>
                     <li class="nav-item"><a class="nav-link active" href="#"><i class="fas fa-table"></i><span>&nbsp;My Categories</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="far fa-user-circle"></i><span>&nbsp;My Analytics</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/profile/edit"><i class="fas fa-user-circle"></i><span>&nbsp;My Profile</span></a>.
+                    <li class="nav-item"><a class="nav-link" href="/profile/edit"><i class="fas fa-user-circle"></i><span>&nbsp;My Profile</span></a>
                     <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-user-circle"></i><span>&nbsp;Logout</span></a>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
@@ -136,8 +136,8 @@
                                 
                                 <div class="col-md-6 text-nowrap">
 
-                                    <div class="btn-group" role="group"><a class="btn btn-light" role="button" href="/expense/create"> <i class="fa fa-plus-square-o"></i></a></div>
-                                    
+                                    <div class="btn-group" role="group"><a class="btn btn-light" role="button" href="/expense/create"> <i class="fa fa-plus-square-o"></i>&nbsp;Add expense</a></div>
+                                    <br />
                                     <div id="dataTable_length" class="dataTables_length" aria-controls="dataTable"><label class="form-label">Show&nbsp;<select class="d-inline-block form-select form-select-sm">
                                                 <option value="10" selected="">10</option>
                                                 <option value="25">25</option>
