--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
     <script>
         validateLogin(function (result) {
             if (result) {
-                window.location.replace("/expenses");
+                window.location.replace("/expense");
             } else {
                 window.location.replace("/login");
             }
