--- a/src/main/resources/static/expense/expense.html
+++ b/src/main/resources/static/expense/expense.html
@@ -22,8 +22,8 @@
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item"><a class="nav-link" href="/customer"><i class="fas fa-tachometer-alt"></i><span>&nbsp;Dashboard</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/expense"><i class="fas fa-user"></i><span>&nbsp;My Expenses</span></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#"><i class="fas fa-table"></i><span>&nbsp;My Categories</span></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/expense"><i class="fas fa-user"></i><span>&nbsp;My Expenses</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-table"></i><span>&nbsp;My Categories</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="far fa-user-circle"></i><span>&nbsp;My Analytics</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/profile/edit"><i class="fas fa-user-circle"></i><span>&nbsp;My Profile</span></a>
                     <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-user-circle"></i><span>&nbsp;Logout</span></a>
