--- a/src/main/resources/static/expense/expense.html
+++ b/src/main/resources/static/expense/expense.html
@@ -63,12 +63,12 @@
 
                                     <div class="btn-group" role="group"><a class="btn btn-light" role="button" href="/expense/create"> <i class="fa fa-plus-square-o"></i>&nbsp;Add expense</a></div>
                                     <br /><br />
-                                    <div id="dataTable_length" class="dataTables_length" aria-controls="dataTable"><label class="form-label">Show&nbsp;<select class="d-inline-block form-select form-select-sm">
+                                    <!--<div id="dataTable_length" class="dataTables_length" aria-controls="dataTable"><label class="form-label">Show&nbsp;<select class="d-inline-block form-select form-select-sm">
                                                 <option value="10" selected="">10</option>
                                                 <option value="25">25</option>
                                                 <option value="50">50</option>
                                                 <option value="100">100</option>
-                                            </select>&nbsp;</label></div>
+                                            </select>&nbsp;</label></div>-->
                                 </div>
                                 <div class="col-md-6">
                                     <div class="text-md-end dataTables_filter" id="dataTable_filter"><label class="form-label"><input type="search" class="form-control form-control-sm" aria-controls="dataTable" placeholder="Search"></label></div>
@@ -95,7 +95,7 @@
                                     </tfoot>
                                 </table>
                             </div>
-                            <div class="row">
+                            <!--<div class="row">
                                 <div class="col-md-6 align-self-center">
                                     <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Showing 1 to 10 of 27</p>
                                 </div>
@@ -110,7 +110,7 @@
                                         </ul>
                                     </nav>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
