--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -23,7 +23,7 @@
                 <ul class="navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item"><a class="nav-link active" href="/customer"><i class="fas fa-tachometer-alt"></i><span>&nbsp;Dashboard</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/expense"><i class="fas fa-user"></i><span>&nbsp;Expenses</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-table"></i><span>&nbsp;Categories</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/category"><i class="fas fa-table"></i><span>&nbsp;Categories</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="far fa-user-circle"></i><span>&nbsp;Analytics</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/profile/edit"><i class="fas fa-user-circle"></i><span>&nbsp;Profile</span></a>
                     <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-user-circle"></i><span>&nbsp;Logout</span></a>
