--- a/src/main/resources/static/expense/expense.html
+++ b/src/main/resources/static/expense/expense.html
@@ -165,7 +165,7 @@
                 deleteExpense($(this).attr('data-id'), function (result) {
                     //$('#confirm-modal').modal('hide');
                     //loadData();
-                    //window.location.replace("/expense");
+                    window.location.replace("/expense");
                 });
             });
         });
