--- a/src/main/resources/static/expense/expense.html
+++ b/src/main/resources/static/expense/expense.html
@@ -79,6 +79,7 @@
                                     <thead>
                                         <tr>
                                             <th>ID</th>
+                                            <th>Date</th>
                                             <th>Name</th>
                                             <th>Description</th>
                                             <th>Action</th>
@@ -88,6 +89,7 @@
                                     <tfoot>
                                         <tr>
                                             <th>ID</th>
+                                            <th>Date</th>
                                             <th>Name</th>
                                             <th>Description</th>
                                             <th></th>
@@ -152,7 +154,7 @@
                 getExpense(function (result) {
                     $("#tableData").empty();
                     $.each(result, function (i, item) {
-                        $("#tableData").append($("<tr>").append($("<td>").text(item.id)).append($("<td>").text(item.name)).append($("<td>").text(item.description)).append($(
+                        $("#tableData").append($("<tr>").append($("<td>").text(item.id)).append($("<td>").text(item.expensedate)).append($("<td>").text(item.name)).append($("<td>").text(item.description)).append($(
                             "<td>\n" +
                             "<div class=\"btn-group btn-group-sm\" role=\"group\"><a class=\"btn btn-light\" role=\"button\" href=\"/expense/edit?id=" + item.id + "\"> <i class=\"fa fa-edit\"></i></a><button class=\"btn btn-light\" data-id=\"" + item.id + "\" type=\"button\" data-bs-target=\"#confirm-modal\" data-bs-toggle=\"modal\"> <i class=\"fa fa-trash\"></i></button></div>\n" +
                             "</td></tr>"
