--- a/src/main/resources/static/expense/expenseCreate.html
+++ b/src/main/resources/static/expense/expenseCreate.html
@@ -64,6 +64,9 @@
                                 <div class="form-group mb-3">
                                     <div class="input-group"><span class="input-group-text">Description </span><input class="form-control" type="text" name="description"></div>
                                 </div>
+                                <div class="form-group mb-3">
+                                    <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="text" name="expensedate"></div>
+                                </div>
                                 <div class="btn-group" role="group"><button class="btn btn-light" type="submit"> <i class="fa fa-save"></i></button></div>
                             </form>
                         </div>
@@ -86,7 +89,7 @@
     <script>
         $(document).ready(function () {
             $("#form").submit(function (event) {
-                postExpense(getExpenseJSON(null, $('input[name=name]').val(), $('input[name=description]').val()), function (result) {
+                postExpense(getExpenseJSON(null, $('input[name=name]').val(), $('input[name=description]').val(), $('input[name=expensedate]').val()), function (result) {
                     window.location.replace("/expense");
                 }, function (error) {
                     $("#error-modal").modal('show');
