--- a/src/main/resources/static/expense/expenseCreate.html
+++ b/src/main/resources/static/expense/expenseCreate.html
@@ -89,8 +89,12 @@
     <script>
         $(document).ready(function () {
             $("#form").submit(function (event) {
+
+                alert($('input[name=expensedate]').val());
+                const date1 = new Date($('input[name=expensedate]').val());
+                alert(date1);
+
                 postExpense(getExpenseJSON(null, $('input[name=name]').val(), $('input[name=description]').val(), $('input[name=expensedate]').val()), function (result) {
-                    alert($('input[name=expensedate]').val());
                     window.location.replace("/expense");
                 }, function (error) {
                     $("#error-modal").modal('show');
