--- a/src/main/resources/static/expense/expenseCreate.html
+++ b/src/main/resources/static/expense/expenseCreate.html
@@ -67,6 +67,12 @@
                                 <div class="form-group mb-3">
                                     <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="expensedate"/></div>
                                 </div>
+                                <div class="form-group mb-3">
+                                    <div class="dropdown"><button class="btn btn-secondary dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button">Choose category </button>
+                                        <div class="dropdown-menu" id="dropdown-boot"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                                    </div>
+                                </div>
+                                
                                 <div class="btn-group" role="group"><button class="btn btn-light" type="submit"> <i class="fa fa-save"></i></button></div>
                             </form>
                         </div>
@@ -89,6 +95,16 @@
     <script>
         $(document).ready(function () {
             $("#form").submit(function (event) {
+                $(loadData());
+
+                function loadData() {
+                    getCat(function (result) {
+                        $("#dropdown-boot").empty();
+                        $.each(result, function (i, item) {
+                            $("#dropdown-boot").append($("<tr>").append($("<td>").text(item.id)).append($("<td>").text(item.name)).append($("<td>").text(item.description)));
+                        });
+                    });
+                }
 
                 postExpense(getExpenseJSON(null, $('input[name=name]').val(), $('input[name=description]').val()), function (result) {
                     window.location.replace("/expense");
@@ -98,7 +114,7 @@
                 });
                 event.preventDefault();
             });
-        });
+        });        
     </script>
 </body>
 
