--- a/src/main/resources/static/expense/expenseCreate.html
+++ b/src/main/resources/static/expense/expenseCreate.html
@@ -98,7 +98,7 @@
                 $(loadData());
 
                 function loadData() {
-                    getCat(function (result) {
+                    getCategory(function (result) {
                         $("#dropdown-boot").empty();
                         $.each(result, function (i, item) {
                             $("#dropdown-boot").append($("<tr>").append($("<td>").text(item.id)).append($("<td>").text(item.name)).append($("<td>").text(item.description)));
