--- a/src/main/resources/static/expense/expenseCreate.html
+++ b/src/main/resources/static/expense/expenseCreate.html
@@ -103,7 +103,7 @@
                     alert("cat method");
                     $("#dropdown-boot").empty();
                     $.each(result, function (i, item) {
-                        $("#dropdown-boot").append($("<tr>").append($("<td>").text(item.id)).append($("<td>").text(item.name)).append($("<td>").text(item.description)));
+                        $("#dropdown-boot").append($("<a class=\"dropdown-item\" href=\"#\">").text(item.name)));
                     });
                 });
             }
