--- a/src/main/resources/static/expense/expenseCreate.html
+++ b/src/main/resources/static/expense/expenseCreate.html
@@ -68,11 +68,16 @@
                                     <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="expensedate"/></div>
                                 </div>
                                 <div class="form-group mb-3">
-                                    <div class="dropdown"><button class="btn btn-secondary dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button">Choose category </button>
-                                        <div class="dropdown-menu" id="dropdown-boot"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                                    <div class="input-group">
+                                        <span class="input-group-text">Category </span>
+                                        <select class="form-select" aria-label="Default select example" id="dropdown-boot">
+                                            <option selected>Please select a category</option>
+                                            <option value="1">One</option>
+                                            <option value="2">Two</option>
+                                            <option value="3">Three</option>
+                                        </select>
                                     </div>
                                 </div>
-                                
                                 <div class="btn-group" role="group"><button class="btn btn-light" type="submit"> <i class="fa fa-save"></i></button></div>
                             </form>
                         </div>
@@ -103,7 +108,7 @@
                     alert("cat method");
                     $("#dropdown-boot").empty();
                     $.each(result, function (i, item) {
-                        $("#dropdown-boot").append($("<a class=\"dropdown-item\" href=\"#\">").text(item.name));
+                        $("#dropdown-boot").append($("<option value=\"" + item.id + "\"> " + item.name + "</option>"));
                     });
                 });
             }
