--- a/src/main/resources/static/expense/expenseCreate.html
+++ b/src/main/resources/static/expense/expenseCreate.html
@@ -99,7 +99,7 @@
 
             $(loadData());
 
-            const selectedTextPick = "";
+            var selectedTextPick = "";
             $('.form-select').change(function() {
                 var selectedText = $(this).find('option:selected').map(function() {
                     return $(this).text();
