--- a/src/main/resources/static/expense/expenseEdit.html
+++ b/src/main/resources/static/expense/expenseEdit.html
@@ -122,7 +122,7 @@
                     $('input[name=id]').val(result["id"]);
                     $('input[name=name]').val(result["name"]);
                     $('input[name=description]').val(result["description"]);
-                    console.log(result["category"]);
+                    console.log(result["category"]["name"]);
                 });
             }
 
