--- a/src/main/resources/static/expense/expenseEdit.html
+++ b/src/main/resources/static/expense/expenseEdit.html
@@ -109,22 +109,26 @@
                 console.log(selectedText);
             });
 
-            getCategory(function (result) {
-                $("#dropdown-boot").empty();
-                $.each(result, function (i, item) {
-                    $("#dropdown-boot").append($("<option value=\"" + item.id + "\"> " + item.name + "</option>"));
-                });
-            });
-
             expenseID = getURLParameter('id');
+            var savedCategoryId = 0;
             if (expenseID !== null) {
                 getExpenses(expenseID, function (result) {
                     $('input[name=id]').val(result["id"]);
                     $('input[name=name]').val(result["name"]);
                     $('input[name=description]').val(result["description"]);
-                    console.log(result["category"]["name"]);
+
+                    savedCategoryId = result["category"]["id"];
+                    $("#dropdown-boot").append($("<option value=\"" + result["category"]["id"] + "\"> " + result["category"]["name"] + "</option>"));
                 });
             }
+
+            getCategory(function (result) {
+                $("#dropdown-boot").empty();
+                $.each(result, function (i, item) {
+                    if(item.id != savedCategoryId);
+                    $("#dropdown-boot").append($("<option value=\"" + item.id + "\"> " + item.name + "</option>"));
+                });
+            });
 
             $("#form").submit(function (event) {
                 putExpense(expenseID, getExpenseJSON($('input[name=id]').val(), $('input[name=name]').val(), $('input[name=description]').val()), function (result) {
