--- a/src/main/resources/static/expense/expenseEdit.html
+++ b/src/main/resources/static/expense/expenseEdit.html
@@ -110,6 +110,7 @@
             });
 
             expenseID = getURLParameter('id');
+            const idtest = "";
             var savedCategoryId = "";
             if (expenseID !== null) {
                 getExpenses(expenseID, function (result) {
@@ -118,16 +119,18 @@
                     $('input[name=description]').val(result["description"]);
 
                     savedCategoryId = result["category"]["id"];
+                    idtest = result["category"]["id"];
                     console.log("within method:" + result["category"]["id"])
                     $("#dropdown-boot").append($("<option value=\"" + result["category"]["id"] + "\" selected> " + result["category"]["name"] + "</option>"));
                 });
             }
 
             console.log("savedcategory: " + savedCategoryId);
+            console.log("const savedcategory: " + savedCategoryId);
             getCategory(function (result) {
                 $("#dropdown-boot").empty();
                 $.each(result, function (i, item) {
-                    if(item.id != savedCategoryId) {
+                    if(item.id !== savedCategoryId) {
                         console.log(item.id);
                         $("#dropdown-boot").append($("<option value=\"" + item.id + "\"> " + item.name + "</option>"));
                     }
